kubernetes/base/krbenterprise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krbenterprise
  namespace: uat-core
spec:
  ingressClassName: nginx
  rules:
    - host: uat-customer.krbenterprise.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krb-enterprise
                port:
                  number: 8282
